--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.3",
+    "@wangeditor/editor-for-vue": "^5.1.10",
     "axios": "^0.25.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
     "express": "^4.17.2",
     "glob": "^7.2.0",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "tim-js-sdk": "^2.19.0",
+    "tim-upload-plugin": "^1.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
@@ -59,9 +63,9 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "vite": "^2.8.1",
-    "vue": "^3.2.30",
+    "vue": "3.2.31",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.14"
   },
   "keywords": [
     "vite",
