--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vite-template",
+  "name": "micro-chat",
   "version": "1.0.0",
   "main": "./dist/electron/main/main.js",
   "author": "sky <https://github.com/umbrella22>",
